plugins {
    id 'java'
}

group = 'org.mve'
version = '1.0.0'

java.sourceCompatibility = JavaVersion.VERSION_1_8;
java.targetCompatibility = JavaVersion.VERSION_1_8;

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}